# koompi-os-pix

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  build.sh  db.json  deploy.sh  docker-build.sh  installer.sh  pix.sh  pkgbuild-bin  pkgbuild-web  sudoers
backend/: Cargo.toml
backend/src/: main.rs
backend/src/graphql/: mod.rs  mutations.rs  queries.rs  root.rs
backend/src/models/: application.rs  mod.rs  packages.rs
backend/src/utils/: json_fs.rs
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.js  Dashboard.js  Home.js  Login.js  NotFound.js  Packages.js  TermHead.js  index.css  index.js
graphql/: query_all_apps.graphql  query_app_by_name.graphql  query_apps_by_names.graphql  query_db_version.graphql  schema.graphql
pix/: Cargo.toml  TODO.md
pix-bin/: Cargo.toml
pix-bin/src/: cli_args.rs  download.rs  install.rs  main.rs  operations.rs  rw_file.rs
pix-bin/src/handlers/: configure.rs  mod.rs  rw_file.rs
pix-web/: Cargo.toml
pix-web-backend/: Cargo.toml
pix-web-backend/src/: main.rs
pix-web-backend/src/graphql/: mutations.rs  root.rs
pix-web-backend/src/models/: application.rs
pix-web-backend/src/utils/: mod.rs
pix-web-front-end/: package-lock.json  package.json
pix/src/: main.rs
pix/src/handlers/: download.rs
script/: pix.sh
