[package]
name = "pix-web-backend"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-files = "0.4.0"
actix-rt = "1.1.1"
actix-web-actors = "3.0.0"
async-graphql = "2.0.8"
async-graphql-actix-web = "2.0.8"
envfile = "0.2.1"
semver = "0.11.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
futures = "0.3.7"
chrono = "0.4.19"
slab = "0.4.2"
uuid = "0.8.1"
