[package]
name = "pix"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
indicatif = "0.15.0"
reqwest = "0.10.8"
tokio = { version = "0.2.22", features = ["macros", "fs"] }